@@ -16,8 +16,8 @@ version = 0.01
 [GatherDir]                     ; we start with everything in the dist dir
 [PruneCruft]                    ; automatically prune cruft defined by RJBS
 [AutoPrereqs]                   ; automatically find our prereqs
-[ManifestSkip]                  ; skip files that matches MANIFEST.SKIP
-skipfile = MANIFEST.SKIP
+; [ManifestSkip]                  ; skip files that matches MANIFEST.SKIP
+; skipfile = MANIFEST.SKIP
 ;content = xxxx
 
 ; Generate tons of tests
@@ -58,7 +58,7 @@ copyright = 1
 [NextRelease]
 time_zone = UTC
 filename = Changes
-format = %v%n%tReleased: %{yyyy-MM-dd HH:mm:ss VVVV}d
+; format = %v%n%tReleased: %{yyyy-MM-dd HH:mm:ss VVVV}d
 ; [ChangelogFromGit]              ; generate CommitLog from git history
 ; tag_regexp = ^release-(.+)$
 ; file_name = CommitLog
