@@ -8,8 +8,7 @@ use Soar::WM::Element;
 
 use Carp;
 use base 'Exporter';
-our @EXPORT = qw( wm_root_from_file );
-our @EXPORT_OK = qw( wm_root );
+our @EXPORT_OK = qw( wm_root_from_file wm_root );
 
 # VERSION
 
@@ -27,9 +26,10 @@ sub wm_root_from_file {
 
 #args should be file=>xx or text=>xx.
 sub wm_root {
-	my ($wme_hash, $root_name) = read_wm(@_);
+	my @slurp_args = @_;
+	my ($wme_hash, $root_name) = read_wm(@slurp_args);
 	
-	my $wm = bless $wme_hash;
+	my $wm = bless $wme_hash, __PACKAGE__;
 	return Soar::WM::Element->new($wm, $root_name);
 }
 
@@ -43,8 +43,8 @@ Soar::WM - Perl extension for representing Soar working memory given a WME dump 
 
 =head1 SYNOPSIS
 
-  use Soar::WM;
-  my $root = wm_root_from_file($WMEfile);
+  use Soar::WM qw(wm_root_from_file);
+  my $root = wm_root_from_file('/path/to/wme/dump');
   print $root->id;
 
 =head1 DESCRIPTION
@@ -52,10 +52,10 @@ Soar::WM - Perl extension for representing Soar working memory given a WME dump 
 This module represents Soar's working memory. It can be used for traversing and manipulating WME dumps
 generated by Soar.
 
-=head METHODS
+=head1 METHODS
 
 =head2 C<wm_root_from_file>
-This function is automatically exported into the using module's namespace. It is a shortcut for:
+This is a shortcut for:
  wm_root(file=>$arg)
 It's single argument is the path to a WME dump file. It returns a L<Soar::WM::Element> object representing the root
 of the given WME dump.
