@@ -1,3 +1,4 @@
 
 
 {{$NEXT}}
+First release. Uses code written by Deryle Lonsdale to slurp a WME dump.
